--- a/config/avia_indoor.yaml
+++ b/config/avia_indoor.yaml
@@ -8,13 +8,16 @@ preprocess:
     lidar_type: 1                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR,
     scan_line: 6
     scan_rate: 10
-    blind: 0.5
+    blind: 0.1
     point_filter_num: 1
 
 mapping:
-    down_sample_size: 0.2
-    max_iteration: 4
-    voxel_size: 0.25
+    down_sample_size: 0.05
+    max_iteration: 10
+    voxel_size: 0.1
+    # down_sample_size: 0.2
+    # max_iteration: 4
+    # voxel_size: 0.25
     max_layer: 4                # 4 layer, 0, 1, 2, 3
     layer_point_size: [ 5, 5, 5, 5, 5 ]
     plannar_threshold: 0.01
@@ -36,7 +39,12 @@ noise_model:
     gyr_cov: 0.25
     b_acc_cov: 0.0043
     b_gyr_cov: 0.000266
-
+    # ranging_cov: 0.01
+    # angle_cov: 0.01
+    # acc_cov: 0.2
+    # gyr_cov: 0.1
+    # b_acc_cov: 0.0001
+    # b_gyr_cov: 0.0001
 
 publish:
     pub_voxel_map: false
